# snapkitty-resonance-isa

./: .gitignore  Cargo.toml  README.md  index.html
crates/abjad/: Cargo.toml
crates/abjad/src/: lib.rs
crates/assembler/: Cargo.toml
crates/assembler/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/deed/: Cargo.toml
crates/deed/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: main.rs
crates/umo/: Cargo.toml
crates/umo/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
crates/wasm-vm/: Cargo.toml
crates/wasm-vm/src/: lib.rs
examples/: resonance.rasm
specs/: isa.md
