[package]
name    = "swarm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kitty-swarm"
path = "src/main.rs"

[dependencies]
vm       = { path = "../vm" }
deed     = { path = "../deed" }
umo      = { path = "../umo" }
abjad    = { path = "../abjad" }
ir       = { path = "../ir" }
assembler = { path = "../assembler" }
sha2     = { workspace = true }
hex      = { workspace = true }
serde    = { workspace = true }
serde_json = "1"
async-nats    = "0.37"
tokio         = { version = "1", features = ["full"] }
futures-util  = "0.3"
